--- a/supervised-learning/scikit/k_nearest_neighbors/knn_basic_classifier_01.ipynb
+++ b/supervised-learning/scikit/k_nearest_neighbors/knn_basic_classifier_01.ipynb
@@ -49,6 +49,7 @@
    "outputs": [],
    "source": [
     "import numpy as np\n",
+    "\n",
     "import matplotlib.pyplot as plt"
    ]
   },
@@ -88,7 +89,7 @@
     {
      "data": {
       "text/plain": [
-       "<matplotlib.text.Text at 0x1b614891cf8>"
+       "<matplotlib.text.Text at 0x2f4cb021d68>"
       ]
      },
      "execution_count": 3,
@@ -191,7 +192,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -201,7 +202,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -210,7 +211,7 @@
        "array([[1],\n       [1],\n       [1],\n       [1],\n       [0],\n       [0],\n       [0],\n       [0],\n       [0]])"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -230,7 +231,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -239,7 +240,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
@@ -248,7 +249,7 @@
        "array(['female'],\n      dtype='<U6')"
       ]
      },
-     "execution_count": 14,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     }
